array.island.Island.scala.error
Compilation error:
Island:9: error: not enough arguments for method max: (implicit cmp: Ordering[B])Int.
Unspecified value parameter cmp.
    return num.max()
                  ^Island:3: error: type mismatch;
 found   : Unit
 required: Int
  if (num.length>2) {
  ^