array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  if (num.length>2) {
    for (i<- 2 to num.length-1){
      if (num(i)<num(i+1) && num(i)<num(i-1)) {
        return island(num.slice(0,i-1))+island(num.slice(i+1,num.length))
      }
       }
    return num.max()
  }
}